--- a/public/app/plugins/datasource/azuremonitor/dashboards/appInsightsFailureDependencies.json
+++ b/public/app/plugins/datasource/azuremonitor/dashboards/appInsightsFailureDependencies.json
@@ -282,7 +282,7 @@
       "targets": [
         {
           "azureLogAnalytics": {
-            "query": "dependencies\n// additional filters can be applied here\n| where $__timeFilter(timestamp)\n| where client_Type != \"Browser\"\n| where resultCode in ($dependency_result_code)\n| extend type=iff(tolower(type) == \"http (tracked component)\", \"HTTP\", type), target=tostring(split(target, \" | cid-v1\")[0])\n| extend [\"Dependency Name\"] = strcat(type, \": \", name, \" \", target)\n| where [\"Dependency Name\"] in ($dependency)\n| summarize FailedCount=sumif(itemCount, success == false) by bin(timestamp, $__interval)\n| order by timestamp asc\n\n",
+            "query": "dependencies\n// additional filters can be applied here\n| where $__timeFilter(timestamp)\n| where client_Type != \"Browser\"\n| where ($dependency_result_code == \"All\" or resultCode in ($dependency_result_code)\n| extend type=iff(tolower(type) == \"http (tracked component)\", \"HTTP\", type), target=tostring(split(target, \" | cid-v1\")[0])\n| extend [\"Dependency Name\"] = strcat(type, \": \", name, \" \", target)\n| where (\"All\" in ($dependency) or [\"Dependency Name\"] in ($dependency))\n| summarize FailedCount=sumif(itemCount, success == false) by bin(timestamp, $__interval)\n| order by timestamp asc\n\n",
             "resources": ["/subscriptions/$sub/resourceGroups/$rg/providers/$ns/$res"],
             "resultFormat": "time_series"
           },
@@ -410,7 +410,7 @@
       "targets": [
         {
           "azureLogAnalytics": {
-            "query": "dependencies\n// additional filters can be applied here\n| where $__timeFilter(timestamp)\n| where client_Type != \"Browser\"\n| where success == false\n| extend type=iff(tolower(type) == \"http (tracked component)\", \"HTTP\", type), target=tostring(split(target, \" | cid-v1\")[0])\n| extend [\"Dependency Name\"] = strcat(type, \": \", name, \" \", target)\n| where [\"Dependency Name\"] in ($dependency)\n| summarize Count=sum(itemCount) by [\"Result Code\"]=resultCode\n",
+            "query": "dependencies\n// additional filters can be applied here\n| where $__timeFilter(timestamp)\n| where client_Type != \"Browser\"\n| where success == false\n| extend type=iff(tolower(type) == \"http (tracked component)\", \"HTTP\", type), target=tostring(split(target, \" | cid-v1\")[0])\n| extend [\"Dependency Name\"] = strcat(type, \": \", name, \" \", target)\n| where (\"All\" in ($dependency) or [\"Dependency Name\"] in ($dependency))\n| summarize Count=sum(itemCount) by [\"Result Code\"]=resultCode\n",
             "resources": ["/subscriptions/$sub/resourceGroups/$rg/providers/$ns/$res"],
             "resultFormat": "table"
           },
@@ -560,7 +560,7 @@
       "targets": [
         {
           "azureLogAnalytics": {
-            "query": "\ndependencies\n// additional filters can be applied here\n| where $__timeFilter(timestamp)\n| where client_Type != \"Browser\"\n| extend type=iff(tolower(type) == \"http (tracked component)\", \"HTTP\", type), target=tostring(split(target, \" | cid-v1\")[0])\n| extend [\"Dependency Name\"] = strcat(type, \": \", name, \" \", target)\n| where [\"Dependency Name\"] in ($dependency)\n// calculate average request duration for all requests\n| summarize Count = count() by bin(timestamp, $__interval)\n| order by timestamp asc\n\n\n",
+            "query": "\ndependencies\n// additional filters can be applied here\n| where $__timeFilter(timestamp)\n| where client_Type != \"Browser\"\n| extend type=iff(tolower(type) == \"http (tracked component)\", \"HTTP\", type), target=tostring(split(target, \" | cid-v1\")[0])\n| extend [\"Dependency Name\"] = strcat(type, \": \", name, \" \", target)\n| where (\"All\" in ($dependency) or [\"Dependency Name\"] in ($dependency))\n// calculate average request duration for all requests\n| summarize Count = count() by bin(timestamp, $__interval)\n| order by timestamp asc\n\n\n",
             "resources": ["/subscriptions/$sub/resourceGroups/$rg/providers/$ns/$res"],
             "resultFormat": "time_series"
           },
@@ -706,7 +706,7 @@
       "targets": [
         {
           "azureLogAnalytics": {
-            "query": "dependencies\n// additional filters can be applied here\n| where $__timeFilter(timestamp)\n| where client_Type != \"Browser\"\n| where resultCode in ($dependency_result_code)\n| extend type=iff(tolower(type) == \"http (tracked component)\", \"HTTP\", type), target=tostring(split(target, \" | cid-v1\")[0])\n| extend [\"Dependency Name\"] = strcat(type, \": \", name, \" \", target)\n| where [\"Dependency Name\"] in ($dependency)\n| summarize ResultCode = sum(itemCount) by resultCode, bin(timestamp, $__interval)\n| sort by timestamp asc\n\n",
+            "query": "dependencies\n// additional filters can be applied here\n| where $__timeFilter(timestamp)\n| where client_Type != \"Browser\"\n| where ($dependency_result_code == \"All\" or resultCode in ($dependency_result_code)\n| extend type=iff(tolower(type) == \"http (tracked component)\", \"HTTP\", type), target=tostring(split(target, \" | cid-v1\")[0])\n| extend [\"Dependency Name\"] = strcat(type, \": \", name, \" \", target)\n| where (\"All\" in ($dependency) or [\"Dependency Name\"] in ($dependency))\n| summarize ResultCode = sum(itemCount) by resultCode, bin(timestamp, $__interval)\n| sort by timestamp asc\n\n",
             "resources": ["/subscriptions/$sub/resourceGroups/$rg/providers/$ns/$res"],
             "resultFormat": "time_series"
           },
@@ -872,7 +872,7 @@
       "targets": [
         {
           "azureLogAnalytics": {
-            "query": "dependencies\n// additional filters can be applied here\n| where $__timeFilter(timestamp)\n| where resultCode in ($dependency_result_code)\n| where client_Type != \"Browser\"\n| extend type=iff(tolower(type) == \"http (tracked component)\", \"HTTP\", type), target=tostring(split(target, \" | cid-v1\")[0])\n| extend [\"Dependency Name\"] = strcat(type, \": \", name, \" \", target)\n| where [\"Dependency Name\"] in ($dependency)\n| summarize failedCount=sumif(itemCount, success == false)\n\n\n",
+            "query": "dependencies\n// additional filters can be applied here\n| where $__timeFilter(timestamp)\n| where ($dependency_result_code == \"All\" or resultCode in ($dependency_result_code)\n| where client_Type != \"Browser\"\n| extend type=iff(tolower(type) == \"http (tracked component)\", \"HTTP\", type), target=tostring(split(target, \" | cid-v1\")[0])\n| extend [\"Dependency Name\"] = strcat(type, \": \", name, \" \", target)\n| where (\"All\" in ($dependency) or [\"Dependency Name\"] in ($dependency))\n| summarize failedCount=sumif(itemCount, success == false)\n\n\n",
             "resources": ["/subscriptions/$sub/resourceGroups/$rg/providers/$ns/$res"],
             "resultFormat": "table"
           },
@@ -1100,7 +1100,7 @@
       "targets": [
         {
           "azureLogAnalytics": {
-            "query": "let m = dependencies\n| where $__timeFilter(timestamp)\n| where client_Type != \"Browser\"\n| project itemCount, duration, typeTransform=iff(tolower(type) == \"http (tracked component)\", \"HTTP\", type), targetTransform=tostring(split(target, \" | cid-v1\")[0]), name, type, target, user_Id, success, resultCode;\nm\n| summarize [\"Failed count\"]=sumif(itemCount, success == false and resultCode in ($dependency_result_code)), [\"Impacted users\"]=dcountif(user_Id, success == false and resultCode in ($dependency_result_code)), [\"Total count\"]=sum(itemCount)\n| project [\"Dependency name\"]=\"All\", [\"Failed count\"], [\"Impacted users\"], [\"Total count\"]\n| union(\nm\n| summarize [\"Failed count\"]=sumif(itemCount, success == false and resultCode in ($dependency_result_code)), [\"Impacted users\"]=dcountif(user_Id, success == false and resultCode in ($dependency_result_code)), [\"Total count\"]=sum(itemCount) by typeTransform=iff(tolower(type) == \"http (tracked component)\", \"HTTP\", type), targetTransform=tostring(split(target, \" | cid-v1\")[0]), name, target, type\n| where [\"Failed count\"] > 0\n| sort by [\"Failed count\"] desc\n| project [\"Dependency name\"]=strcat(typeTransform, \": \", name , \" \", targetTransform), [\"Failed count\"], [\"Total count\"], [\"Impacted users\"], type, target, name)\n",
+            "query": "let m = dependencies\n| where $__timeFilter(timestamp)\n| where client_Type != \"Browser\"\n| project itemCount, duration, typeTransform=iff(tolower(type) == \"http (tracked component)\", \"HTTP\", type), targetTransform=tostring(split(target, \" | cid-v1\")[0]), name, type, target, user_Id, success, resultCode;\nm\n| summarize [\"Failed count\"]=sumif(itemCount, success == false and  ($dependency_result_code == \"All\" or resultCode in ($dependency_result_code))), [\"Impacted users\"]=dcountif(user_Id, success == false and  ($dependency_result_code == \"All\" or resultCode in ($dependency_result_code))), [\"Total count\"]=sum(itemCount)\n| project [\"Dependency name\"]=\"All\", [\"Failed count\"], [\"Impacted users\"], [\"Total count\"]\n| union(\nm\n| summarize [\"Failed count\"]=sumif(itemCount, success == false and  ($dependency_result_code == \"All\" or resultCode in ($dependency_result_code))), [\"Impacted users\"]=dcountif(user_Id, success == false and  ($dependency_result_code == \"All\" or resultCode in ($dependency_result_code))), [\"Total count\"]=sum(itemCount) by typeTransform=iff(tolower(type) == \"http (tracked component)\", \"HTTP\", type), targetTransform=tostring(split(target, \" | cid-v1\")[0]), name, target, type\n| where [\"Failed count\"] > 0\n| sort by [\"Failed count\"] desc\n| project [\"Dependency name\"]=strcat(typeTransform, \": \", name , \" \", targetTransform), [\"Failed count\"], [\"Total count\"], [\"Impacted users\"], type, target, name)\n",
             "resources": ["/subscriptions/$sub/resourceGroups/$rg/providers/$ns/$res"],
             "resultFormat": "table"
           },
@@ -1375,7 +1375,7 @@
       "targets": [
         {
           "azureLogAnalytics": {
-            "query": "let min_length_8 = (s: string) {\n    let len = strlen(s);\n    case(len == 1, strcat(s, s, s, s, s, s, s, s),\n        len == 2 or len == 3, strcat(s, s, s, s),\n        len == 4 or len == 5 or len == 6 or len == 7, strcat(s, s),\n        s)\n};\nlet ai_hash = (s: string) {\n    abs(toint(__hash_djb2(min_length_8(s))))\n};\n\ndependencies\n// additional filters can be applied here\n| where $__timeFilter(timestamp) and resultCode in ($dependency_result_code)\n| extend typeTransform=iff(tolower(type) == \"http (tracked component)\", \"HTTP\", type), targetTransform=tostring(split(target, \" | cid-v1\")[0])\n| extend [\"Dependency Name\"] = strcat(typeTransform, \": \", name, \" \", targetTransform)\n| where [\"Dependency Name\"] in ($dependency) and isnotempty(operation_Id)\n| where resultCode in ($dependency_result_code)\n| project [\"Dependency Name\"], target, ResponseCode = resultCode, ResponseTime = duration, OperationID = operation_Id, type, name, Score=ai_hash(operation_Id)\n| top 20 by Score asc\n\n\n",
+            "query": "let min_length_8 = (s: string) {\n    let len = strlen(s);\n    case(len == 1, strcat(s, s, s, s, s, s, s, s),\n        len == 2 or len == 3, strcat(s, s, s, s),\n        len == 4 or len == 5 or len == 6 or len == 7, strcat(s, s),\n        s)\n};\nlet ai_hash = (s: string) {\n    abs(toint(__hash_djb2(min_length_8(s))))\n};\n\ndependencies\n// additional filters can be applied here\n| where $__timeFilter(timestamp) and  ($dependency_result_code == \"All\" or resultCode in ($dependency_result_code))\n| extend typeTransform=iff(tolower(type) == \"http (tracked component)\", \"HTTP\", type), targetTransform=tostring(split(target, \" | cid-v1\")[0])\n| extend [\"Dependency Name\"] = strcat(typeTransform, \": \", name, \" \", targetTransform)\n| where (\"All\" in ($dependency) or [\"Dependency Name\"] in ($dependency)) and isnotempty(operation_Id)\n| where ($dependency_result_code == \"All\" or resultCode in ($dependency_result_code)\n| project [\"Dependency Name\"], target, ResponseCode = resultCode, ResponseTime = duration, OperationID = operation_Id, type, name, Score=ai_hash(operation_Id)\n| top 20 by Score asc\n\n\n",
             "resources": ["/subscriptions/$sub/resourceGroups/$rg/providers/$ns/$res"],
             "resultFormat": "table"
           },
@@ -1524,6 +1524,7 @@
         "type": "query"
       },
       {
+        "allValue": "\"All\"",
         "current": {},
         "datasource": {
           "type": "grafana-azure-monitor-datasource",
@@ -1538,7 +1539,7 @@
         "options": [],
         "query": {
           "azureLogAnalytics": {
-            "query": "dependencies\r\n| search \"*\"\r\n| where $__timeFilter(timestamp)\r\n| where client_Type != \"Browser\" and success == false\r\n| extend type=iff(tolower(type) == \"http (tracked component)\", \"HTTP\", type), target=tostring(split(target, \" | cid-v1\")[0])\r\n| project [\"Dependency Name\"] = strcat(type, \": \", name, \" \", target), success\r\n| summarize count() by [\"Dependency Name\"]\r\n",
+            "query": "dependencies\r\n| where $__timeFilter(timestamp)\r\n| where client_Type != \"Browser\" and success == false\r\n| extend type=iff(tolower(type) == \"http (tracked component)\", \"HTTP\", type), target=tostring(split(target, \" | cid-v1\")[0])\r\n| project [\"Dependency Name\"] = strcat(type, \": \", name, \" \", target), success\r\n| summarize count() by [\"Dependency Name\"]\r\n",
             "resources": ["/subscriptions/$sub/resourceGroups/$rg/providers/$ns/$res"]
           },
           "queryType": "Azure Log Analytics",
@@ -1552,6 +1553,7 @@
         "type": "query"
       },
       {
+        "allValue": "\"All\"",
         "current": {},
         "datasource": {
           "type": "grafana-azure-monitor-datasource",
@@ -1566,7 +1568,7 @@
         "options": [],
         "query": {
           "azureLogAnalytics": {
-            "query": "dependencies\r\n| search \"*\"\r\n// additional filters can be applied here\r\n| where $__timeFilter(timestamp)\r\n| where client_Type != \"Browser\"\r\n| where success == false\r\n| summarize _count=sum(itemCount) by resultCode\r\n| sort by _count desc",
+            "query": "dependencies\r\n// additional filters can be applied here\r\n| where $__timeFilter(timestamp)\r\n| where client_Type != \"Browser\"\r\n| where success == false\r\n| summarize _count=sum(itemCount) by resultCode\r\n| sort by _count desc",
             "resources": ["/subscriptions/$sub/resourceGroups/$rg/providers/$ns/$res"]
           },
           "queryType": "Azure Log Analytics",
