--- a/public/app/plugins/datasource/azuremonitor/dashboards/appInsightsFailureExceptions.json
+++ b/public/app/plugins/datasource/azuremonitor/dashboards/appInsightsFailureExceptions.json
@@ -289,7 +289,7 @@
       "targets": [
         {
           "azureLogAnalytics": {
-            "query": "\nexceptions\n// additional filters can be applied here\n| where $__timeFilter(timestamp)\n| where type in ($exception_type)\n| summarize FailedCount=sum(itemCount) by bin(timestamp, $__interval)\n| order by timestamp asc\n\n",
+            "query": "\nexceptions\n// additional filters can be applied here\n| where $__timeFilter(timestamp)\n| where (\"All\" in ($exception_type) or type in ($exception_type))\n| summarize FailedCount=sum(itemCount) by bin(timestamp, $__interval)\n| order by timestamp asc\n\n",
             "resources": ["/subscriptions/$sub/resourceGroups/$rg/providers/$ns/$res"],
             "resultFormat": "time_series"
           },
@@ -718,7 +718,7 @@
       "targets": [
         {
           "azureLogAnalytics": {
-            "query": "exceptions\n// additional filters can be applied here\n| where $__timeFilter(timestamp)\n| where client_Type != \"Browser\"\n| where problemId in ($exception)\n| where type in ($exception_type)\n| summarize failedCount=sum(itemCount)\n\n\n",
+            "query": "exceptions\n// additional filters can be applied here\n| where $__timeFilter(timestamp)\n| where client_Type != \"Browser\"\n| where (\"All\" in ($exception) or problemId in ($exception))\n| where (\"All\" in ($exception_type) or type in ($exception_type))\n| summarize failedCount=sum(itemCount)\n\n\n",
             "resources": ["/subscriptions/$sub/resourceGroups/$rg/providers/$ns/$res"],
             "resultFormat": "table"
           },
@@ -896,7 +896,7 @@
       "targets": [
         {
           "azureLogAnalytics": {
-            "query": "let m = exceptions\n| where $__timeFilter(timestamp)\n| where client_Type != \"Browser\"\n| where type in ($exception_type)\n| project itemCount, user_Id, problemId;\nm\n| summarize Count=sum(itemCount), impactedUsers=dcount(user_Id)\n| project Exception=\"All\", Count, impactedUsers\n| union(\nm\n| summarize Count=sum(itemCount), impactedUsers=dcount(user_Id) by problemId\n| sort by Count desc\n| project Exception=problemId, Count, impactedUsers)\n",
+            "query": "let m = exceptions\n| where $__timeFilter(timestamp)\n| where client_Type != \"Browser\"\n| where (\"All\" in ($exception_type) or type in ($exception_type))\n| project itemCount, user_Id, problemId;\nm\n| summarize Count=sum(itemCount), impactedUsers=dcount(user_Id)\n| project Exception=\"All\", Count, impactedUsers\n| union(\nm\n| summarize Count=sum(itemCount), impactedUsers=dcount(user_Id) by problemId\n| sort by Count desc\n| project Exception=problemId, Count, impactedUsers)\n",
             "resources": ["/subscriptions/$sub/resourceGroups/$rg/providers/$ns/$res"],
             "resultFormat": "table"
           },
@@ -1054,7 +1054,7 @@
       "targets": [
         {
           "azureLogAnalytics": {
-            "query": "let min_length_8 = (s: string) {\n    let len = strlen(s);\n    case(len == 1, strcat(s, s, s, s, s, s, s, s),\n        len == 2 or len == 3, strcat(s, s, s, s),\n        len == 4 or len == 5 or len == 6 or len == 7, strcat(s, s),\n        s)\n};\nlet ai_hash = (s: string) {\n    abs(toint(__hash_djb2(min_length_8(s))))\n};\n\nexceptions\n// additional filters can be applied here\n| where $__timeFilter(timestamp)\n| where type in ($exception_type)\n| where problemId in ($exception)\n| where isnotempty(operation_Id)\n| project Exception=problemId, OperationID=operation_Id, Score=ai_hash(operation_Id)\n| top 20 by Score asc\n\n\n",
+            "query": "let min_length_8 = (s: string) {\n    let len = strlen(s);\n    case(len == 1, strcat(s, s, s, s, s, s, s, s),\n        len == 2 or len == 3, strcat(s, s, s, s),\n        len == 4 or len == 5 or len == 6 or len == 7, strcat(s, s),\n        s)\n};\nlet ai_hash = (s: string) {\n    abs(toint(__hash_djb2(min_length_8(s))))\n};\n\nexceptions\n// additional filters can be applied here\n| where $__timeFilter(timestamp)\n| where (\"All\" in ($exception_type) or type in ($exception_type))\n| where (\"All\" in ($exception) or problemId in ($exception))\n| where isnotempty(operation_Id)\n| project Exception=problemId, OperationID=operation_Id, Score=ai_hash(operation_Id)\n| top 20 by Score asc\n\n\n",
             "resources": ["/subscriptions/$sub/resourceGroups/$rg/providers/$ns/$res"],
             "resultFormat": "table"
           },
@@ -1207,6 +1207,7 @@
         "type": "query"
       },
       {
+        "allValue": "\"All\"",
         "current": {},
         "datasource": {
           "type": "grafana-azure-monitor-datasource",
@@ -1235,6 +1236,7 @@
         "type": "query"
       },
       {
+        "allValue": "\"All\"",
         "current": {},
         "datasource": {
           "type": "grafana-azure-monitor-datasource",
@@ -1249,7 +1251,7 @@
         "options": [],
         "query": {
           "azureLogAnalytics": {
-            "query": "exceptions\r\n| search \"*\"\r\n| where $__timeFilter(timestamp)\r\n| where client_Type != \"Browser\"\r\n| where type in ($exception_type)\r\n| summarize count() by problemId\r\n",
+            "query": "exceptions\r\n| search \"*\"\r\n| where $__timeFilter(timestamp)\r\n| where client_Type != \"Browser\"\r\n| where (\"All\" in ($exception_type) or type in ($exception_type))\r\n| summarize count() by problemId\r\n",
             "resources": ["/subscriptions/$sub/resourceGroups/$rg/providers/$ns/$res"]
           },
           "queryType": "Azure Log Analytics",
